instances-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Create 1 Web Server instance and 1 Kali Linux instance with security groups'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t3.small
    AllowedValues:
      [
        t2.nano,
        t2.micro,
        t2.small,
        t2.medium,
        t2.large,
        t2.xlarge,
        t2.2xlarge,
        t3.nano,
        t3.micro,
        t3.small,
        t3.medium,
        t3.large,
        t3.xlarge,
        t3.2xlarge,
        m4.large,
        m4.xlarge,
        m4.2xlarge,
        m4.4xlarge,
        m4.10xlarge,
        m5.large,
        m5.xlarge,
        m5.2xlarge,
        m5.4xlarge,
        c5.large,
        c5.xlarge,
        c5.2xlarge,
        c5.4xlarge,
        c5.9xlarge,
        g3.8xlarge,
        r5.large,
        r5.xlarge,
        r5.2xlarge,
        r5.4xlarge,
        i3.xlarge,
        i3.2xlarge,
        i3.4xlarge,
        i3.8xlarge,
        d2.xlarge,
        d2.2xlarge,
        d2.4xlarge,
        d2.8xlarge,
      ]
    ConstraintDescription: must be a valid EC2 instance type.
  InstanceConnectLocation:
    Description: The CIDR address range that is allowed to connect to the Kali Linux instance
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  WebServerAmiId:
    Description: AMI for the Web Server instance
    Type: AWS::EC2::Image::Id
    Default: ami-050a3da3a5b79e525
  KaliLinuxAmiId:
    Description: AMI for the Kali Linux instance
    Type: AWS::EC2::Image::Id
    Default: ami-050a3da3a5b79e525
  NetworkStackName:
    Description: Name of the VPC stack
    Type: String
    Default: VPC-Baseline-Stack

Resources:
  KaliLinuxEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      SecurityGroupIds: [!GetAtt KaliLinuxSecurityGroup.GroupId]
      KeyName: !Ref KeyName
      ImageId: !Ref KaliLinuxAmiId
      SubnetId:
        Fn::ImportValue: !Sub '${NetworkStackName}-PublicSubnet0'
      Tags:
        - Key: 'Name'
          Value: !Join
            - ''
            - - !Ref 'AWS::StackName'
              - -KaliLinux-Instance
  WebServerEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      SecurityGroupIds: [!GetAtt WebServerSecurityGroup.GroupId]
      KeyName: !Ref KeyName
      ImageId: !Ref WebServerAmiId
      SubnetId:
        Fn::ImportValue: !Sub '${NetworkStackName}-PrivateSubnet0'
      Tags:
        - Key: 'Name'
          Value: !Join
            - ''
            - - !Ref 'AWS::StackName'
              - -WebServer-Instance
  KaliLinuxSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound HTTP and NICE DCV
      GroupName: !Sub '${AWS::StackName}-Kali-Linux-SG'
      VpcId:
        Fn::ImportValue: !Sub '${NetworkStackName}-VPC'
      Tags:
        - Key: 'Name'
          Value: !Join
            - ''
            - - !Ref 'AWS::StackName'
              - -Kali-Linux-SG
  ## Kali Linux SG Rules
  KaliLinuxSecurityGroupIngressGuacamole:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt KaliLinuxSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: !Ref InstanceConnectLocation
      Description: Allow HTTP inbound for Guacamole
  KaliLinuxSecurityGroupIngressNICEDCVtcp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt KaliLinuxSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 8443
      ToPort: 8443
      CidrIp: !Ref InstanceConnectLocation
      Description: Allow TCP inbound for NICE DCV
  KaliLinuxSecurityGroupIngressNICEDCVudp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt KaliLinuxSecurityGroup.GroupId
      IpProtocol: udp
      FromPort: 8443
      ToPort: 8443
      CidrIp: !Ref InstanceConnectLocation
      Description: Allow UDP inbound for NICE DCV
  KaliLinuxSecurityGroupEgressToWebServer:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt KaliLinuxSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      DestinationSecurityGroupId: !GetAtt WebServerSecurityGroup.GroupId
      Description: Allow outbound to Web Server SG only
  ## Web Server SG
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound HTTP and HTTPS from Kali Linux SG only
      GroupName: !Sub '${AWS::StackName}-Web-Server-SG'
      VpcId:
        Fn::ImportValue: !Sub '${NetworkStackName}-VPC'
      Tags:
        - Key: 'Name'
          Value: !Join
            - ''
            - - !Ref 'AWS::StackName'
              - -Web-Server-SG
  WebServerSecurityGroupIngressFromKaliLinux:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WebServerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId: !GetAtt KaliLinuxSecurityGroup.GroupId
      Description: Allow HTTP inbound from Kali Linux SG
  WebServerSecurityGroupEgressRestricted:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt WebServerSecurityGroup.GroupId
      IpProtocol: '-1'
      CidrIp: 127.0.0.1/32
      Description: Do allow any outbound
Outputs:
  WebServerInstanceId:
    Description: InstanceId of the Web Server EC2 instance
    Value: !Ref WebServerEC2Instance
  KaliLinuxInstanceId:
    Description: InstanceId of the Kali Linux EC2 instance
    Value: !Ref KaliLinuxEC2Instance
  KaliLinuxPublicDNS:
    Description: Public DNSName of the Kali Linux EC2 instance
    Value: !GetAtt KaliLinuxEC2Instance.PublicDnsName
  KaliLinuxPublicIP:
    Description: Public IP address of the Kali Linux EC2 instance
    Value: !GetAtt KaliLinuxEC2Instance.PublicIp
